--- a/dokumentacja/dokumentacja.tex
+++ b/dokumentacja/dokumentacja.tex
@@ -89,9 +89,20 @@
 			
 				W rozwiązaniu powyższego problemu zastosowano metodę podziału i ograniczeń. Metoda ta jest metodą optymalizacji dyskretnej, opierając się na podejściu \textit{dziel i zwyciężaj}.
 				W każdym kroku algorytmu przeglądane jest drzewo potencjalnych rozwiązań. Jeżeli natrafimy na węzeł, który jest liściem, czyli można określić dla niego długość drogi komiwojażera, sprawdzamy, czy nowo znaleziona wartość nie jest lepsza od aktualnie zapisanej. Jeżeli tak jest, to zapamiętujemy nowe rozwiązanie. W przypadku, gdy dany węzeł nie jest liściem, tworzymy dla niego pod-problemy. W tym celu odwiedzamy kolejne miasto starając się oszacować dolne ograniczenie kosztów całej trasy. W tym projekcie wykorzystano najprostszy sposób szacowania. Na początku z macierzy sąsiedztwa wycinana jest przekątna, następnie kolumny i wiersze miejsc już odwiedzonych. Następnie wartości z tak przygotowanej macierzy są sortowane w kolejności niemalejącej. Szacowanie polega na dodaniu do siebie tylu kolejnych wartości z listy, ile zostało miast do odwiedzenia. W niniejszym projekcie do przetrzymywania drzewa rozwiązań wykorzystano listę jednokierunkową. Wybór wynika z faktu, iż i tak należy przejrzeć wszystkie możliwe węzły, aby sprawdzić, czy ich ograniczenie nie jest większe niż aktualnie znalezione.
-	\subsection{Technologia i implementacja rozwiązań}	
-		Projekt implementowano 	w języku Java w wersji 8. Środowiskiem wspierającym rozwój prac był InteliJ Idea Ultimate w wersji 14.07.   	
+	\subsection{Analiza złożoności obliczeniowej algorytmów}
+
 \section{Projekt aplikacji}	
+	\subsection{Technologia i implementacja rozwiązań}	
+	Projekt implementowano 	w języku Java w wersji 8. Środowiskiem wspierającym rozwój prac był InteliJ Idea Ultimate w wersji 14.07.   	
+		\subsection{Struktura programu}	
+		Program jest podzielony na moduły:
+		\begin{itemize}
+			\item model - zawierający dane modelujące elementy przetwarzane w programie tj: Macierze, Wierzchołki
+			\item algorithm - implementacje algorytmów będących przedmiotem badań
+			\item service - klasy służące do obliczeń
+			\item input - parsowanie danych wejściowych, generowanie macierzy
+			\item output - zapisywanie wyników do plików csv, analizowanie wyników
+		\end{itemize}
 	\subsection{Wybrane klasy}
 	
 		\subsubsection{Klasa Matrix - reprezentacja połączeń grafu}
@@ -425,7 +436,7 @@
 			\caption{ Czas działania algorytmu dla metody podziału i ograniczeń porównanie czasów }
 		\end{figure}
 		
-	\subsection{Czas wykonywania algorytmu przy stałym rozmiarze danych wejściowych i zmiennej licznie wątków}	
+	\subsection{Czas wykonywania algorytmu przy stałym rozmiarze danych wejściowych i zmiennej liczbie wątków}	
 		
 		\subsubsection{Algorytm przeglądu zupełnego - działanie szeregowe}
 	
@@ -473,7 +484,7 @@
 					\end{tabular} 
 				\end{table}
 		Z faktu charakteru działania algorytmów równoległych niemożliwe było wydzielenie czasów pojedynczych obliczeń. W związku z tym czas został zmierzony od uruchomienia do zakończenia działania wszystkich wątków.
-		\subsubsection{Algorytm przeglądu zupełnego - porównanie czasów}	
+		\subsubsection{Algorytm przeglądu zupełnego - porównanie czasów działania}	
 			Warto zauważyć, że czas działania algorytmów uruchomionych równolegle jest dużo niższy, niż w przypadku działania szeregowego. W poniższej tabeli zebrano porównanie czasów dla algorytmu przeglądu zupełnego. Obydwa przypadki operowały na danych wejściowych w rozmiarze 10 wierzchołków, oraz zostały uruchomione dziesięciokrotnie.
 			
 				\begin{table}[H]
@@ -495,7 +506,7 @@
 				
 			Z wykresów można wywnioskować, że przy rozmiarze problemu równym 10 czas działania algorytmu równoległego jest porównywalny z czasem uruchomienia algorytmu szeregowego trzy razy.
 			
-		\subsubsection{Algorytm podziału i ograniczeń - szeregowo}
+		\subsubsection{Algorytm podziału i ograniczeń - działanie szeregowe}
 			Z racji szybkości obliczeń algorytmu podziału i ograniczeń, w porównaniu do algorytmu przeglądu zupełnego zwiększono rozmiar danych wejściowych do 50 wierzchołków. Podobnie jak w przypadku algorytmu uruchamianego szeregowo wykonano pomiar czasu dla 10 uruchomień algorytmu na tej samej instancji.
 			\begin{table}[H]
 				\centering
@@ -525,12 +536,24 @@
 		\end{figure}
 	
 	
-		\subsubsection{Algorytm podziału i ograniczeń - równolegle}
+		\subsubsection{Algorytm podziału i ograniczeń - działanie równoległe}
+			Badanie algorytmu podziału i ograniczeń w wersji równoległej nie było łatwe, ponieważ dla założonych danych ilość pamięci potrzebnej do obliczeń wymagała zmiany ustawień uruchomienia programu, tak aby dostał on więcej zasobów pamięci. Po tej zmianie czas przetwarzania dla 50 wierzchołków wyniósł : \textit{26749 ms}. Badany czas dotyczy 10 wątków uruchomionych jednocześnie dla jednakowej instancji macierzy o rozmiarze 50 wierzchołków.
 			
-		
 		\subsubsection{Algorytm podziału i ograniczeń - porównanie czasu działania}
 			
+				\begin{table}[H]
+					\centering
+					\caption{Czas działania algorytmu przeglądu zupełnego porównanie}
+					\begin{tabular}{|c|c|}
+						
+						\hline rodzaj wersji& czas działania algorytmu [ms] \\ 
+						\hline równoległa  & 26749 \\ 
+						\hline szeregowa   & 28226 \\ 
+						\hline 
+					\end{tabular} 
+				\end{table}
 	
+	Czas wykonywania algorytmu zrównoleglonego jest lepszy od czasu wykonywania szeregowego. W odróżnieniu od poprzedniego algorytmu różnica między czasami nie jest taka znaczna. Może to być spowodowane duża ilością pamięci potrzebną podczas pracy algorytmu podziału i ograniczeń. 
 	
 	
 	\subsection{Analiza i ocena jakości}
