--- a/dokumentacja/dokumentacja.tex
+++ b/dokumentacja/dokumentacja.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{booktabs}
 \usepackage{biblatex}
+\usepackage{pdfpages}
 
 \usepackage{graphicx}
 \usepackage{float}
@@ -21,7 +22,7 @@
   
 
 \begin{document}	
-
+\includepdf[pages={1}]{strona-tytulowa.pdf}
 \tableofcontents
 
 \newpage
