--- a/dokumentacja/dokumentacja.tex
+++ b/dokumentacja/dokumentacja.tex
@@ -9,6 +9,8 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{geometry}
+\usepackage{titlesec}
+
 \usepackage{listings}
 \geometry{
 	a4paper,
@@ -21,8 +23,8 @@
 \usepackage{etoolbox}
 \patchcmd{\thebibliography}{\section*{\refname}}{}{}{}
   
-
 \begin{document}	
+	
 \includepdf[pages={1}]{strona-tytulowa.pdf}
 \tableofcontents
 
@@ -41,6 +43,7 @@
 		Celem projektu jest zbadanie wpływu zmiany ilości wątków na czas działania programów.
 	\subsection {Zakres projektu}
 	Projekt obejmuje implementację oraz zbadanie czasu działania algorytmów grafowych poszukiwania najkrótszej ścieżki pomiędzy wszystkimi wierzchołkami. Problem znany jest powszechnie jako problem komiwojażera.
+	\newpage
 \section{Sformułowanie problemu}
 		Problem komiwojażera jest problemem optymalizacyjnym, polegającym na znalezieniu ścieżki pomiędzy ustalonymi miastami dla następujących warunków: 
 		\begin{itemize}
@@ -57,8 +60,10 @@
 			
 				W rozwiązaniu powyższego problemu zastosowano metodę podziału i ograniczeń. Metoda ta jest metodą optymalizacji dyskretnej, opierając się na podejściu \textit{dziel i zwyciężaj}.
 				W każdym kroku algorytmu przeglądane jest drzewo potencjalnych rozwiązań. Jeżeli natrafimy na węzeł, który jest liściem, czyli można określić dla niego długość drogi komiwojażera, sprawdzamy, czy nowo znaleziona wartość nie jest lepsza od aktualnie zapisanej. Jeżeli tak jest, to zapamiętujemy nowe rozwiązanie. W przypadku, gdy dany węzeł nie jest liściem, tworzymy dla niego pod-problemy. W tym celu odwiedzamy kolejne miasto starając się oszacować dolne ograniczenie kosztów całej trasy. W tym projekcie wykorzystano najprostszy sposób szacowania. Na początku z macierzy sąsiedztwa wycinana jest przekątna, następnie kolumny i wiersze miejsc już odwiedzonych. Następnie wartości z tak przygotowanej macierzy są sortowane w kolejności niemalejącej. Szacowanie polega na dodaniu do siebie tylu kolejnych wartości z listy, ile zostało miast do odwiedzenia. W niniejszym projekcie do przetrzymywania drzewa rozwiązań wykorzystano listę jednokierunkową. Wybór wynika z faktu, iż i tak należy przejrzeć wszystkie możliwe węzły, aby sprawdzić, czy ich ograniczenie nie jest większe niż aktualnie znalezione.
+				
 	\subsection{Analiza złożoności obliczeniowej algorytmów}
-
+				Algorytm przeglądu zupełnego polega na wygenerowaniu wszystkich możliwych rozwiązań, w przypadku problemu komiwojażera są to wszystkie możliwe ścieżki Hamiltona. Sposób rozwiązania polegający na przeglądzie zupełnym wymaga sprawdzenia wszystkich permutacji wierzchołków, co w konsekwencji prowadzi do złożoności wykładniczej (n!). Problemy silnie NP-trudne zawsze rozwiązywane są przy pomocy algorytmów wykładniczych takich jak Branch\&Bound. W przypadku tego algorytmu istotny jest problem przydziału, który rozwiązywany jest w czasie wielomianowym.
+\newpage
 \section{Projekt aplikacji}	
 	\subsection{Technologia i implementacja rozwiązań}	
 	Projekt implementowano 	w języku Java w wersji 8. Środowiskiem wspierającym rozwój prac był InteliJ Idea Ultimate w wersji 14.07.   	
@@ -285,6 +290,7 @@
 			}
 			}
 			\end{lstlisting}
+			\newpage
 \section{Testowanie wydajności}	
 	\subsection{Czasy wykonania algorytmów przy stałej liczbie wątków i zmiennych rozmiarach danych wejściowych}
 		
@@ -312,7 +318,7 @@
 			\end{tabular} 
 		\end{table}
 		Czas działania algorytmu dla przeglądu zupełnego ma charakter wykładniczy. Jest to metoda z najgorszą możliwą złożonością, jednakże z pewnością daje dobre wyniki.
-		\begin{figure}
+		\begin{figure}[bp!]
 			\centering
 			\includegraphics[width=0.7\linewidth]{bfS}
 			\caption{Algorytm przeglądu zupełnego - szeregowo}
@@ -525,13 +531,12 @@
 	
 	
 	\subsection{Analiza i ocena jakości}
-		Przeanalizowanie jakości jest zadaniem nietrywialnym, lecz możliwym. Algorytm przeglądu zupełnego daje rozwiązanie optymalne zawsze. Kosztowne jest jednak sprawdzenie wszystkich możliwych rozwiązań. W wykresów przestawionych w tym dokumencie można z łatwością wywnioskować, że czas działania rośnie w sposób wykładniczy. Przy 15 wierzchołkach problem jest praktycznie nierozwiązywalny przez domowe komputery. Drugie podejście analizowanie w tym projekcie pozwala na znaczne zredukowanie czasu działania. Jednakże odbywa się to kosztem pamięci. Jest to spowodowane faktem przechowywania w pamięci drzewa przeszukiwań, które podczas pracy algorytmu rozrasta się bardzo szybko. Podczas badań czasu pracy algorytmu Java zwróciła błąd przepełnienia pamięci już dla 75 wierzchołków. Nie jest to wartość deterministyczna, ponieważ zależy od wygenerowanych danych wejściowych. Może okazać się, ze szybko znajdziemy minimum lokalne funkcji drogi i odrzucone zostaną rozwiązania na pewno nie optymalne.
-	\subsection{Wnioski z testów i badań}
-		Największą trudnością podczas badań było wstępne oszacowanie czasu pracy algorytmów. Jeżeli rozmiar problemu wejściowego był zbyt duży, czas oczekiwania na wyniki stawał się zbyt duże.
-		
+		Przeanalizowanie jakości jest zadaniem nietrywialnym, lecz możliwym. Algorytm przeglądu zupełnego daje rozwiązanie optymalne zawsze. Kosztowne jest jednak sprawdzenie wszystkich możliwych rozwiązań. W wykresów przestawionych w tym dokumencie można z łatwością wywnioskować, że czas działania rośnie w sposób wykładniczy. Przy 15 wierzchołkach problem jest praktycznie nierozwiązywalny przez domowe komputery. Drugie podejście analizowanie w tym projekcie pozwala na znaczne zredukowanie czasu działania. Jednakże odbywa się to kosztem pamięci. Jest to spowodowane faktem przechowywania w pamięci drzewa przeszukiwań, które podczas pracy algorytmu rozrasta się bardzo szybko. Podczas badań czasu pracy algorytmu Java zwróciła błąd przepełnienia pamięci już dla 75 wierzchołków. Nie jest to wartość deterministyczna, ponieważ zależy od wygenerowanych danych wejściowych. Może okazać się, ze szybko znajdziemy minimum lokalne funkcji drogi i odrzucone zostaną rozwiązania na pewno nie optymalne. Największą trudnością podczas badań było wstępne oszacowanie czasu pracy algorytmów. Jeżeli rozmiar problemu wejściowego był zbyt duży, czas oczekiwania na wyniki stawał się zbyt duże.
+		\newpage
 \section{Podsumowanie}
-	Wykonanie projektu pozwoliło uzmysłowić nam istotę dobrego planowania pracy podczas operacji na wielu wątkach. Najistotniejszymi problemami jest synchronizowany dostęp do zasobów podczas pracy wielu wątków. Zmierzyliśmy się z tym problem podczas mierzenia czasu pracy algorytmów. Zastosowanie odpowiednich technik i badań operacyjnych umożliwiło implementację algorytmów. Algorytmy rozwiązujące optymalizacyjny problem komiwojażera są tematem rozległym i nietrywialnym.
-\section{Literatura}
+	Wykonanie projektu pozwoliło uzmysłowić nam istotę dobrego planowania pracy podczas operacji na wielu wątkach. Najistotniejszymi problemami jest synchronizowany dostęp do zasobów podczas pracy wielu wątków. Zmierzyliśmy się z tym problem podczas mierzenia czasu pracy algorytmów. Zastosowanie odpowiednich technik i badań operacyjnych umożliwiło implementację algorytmów. Algorytmy rozwiązujące optymalizacyjny problem komiwojażera są tematem rozległym i nietrywialnym. Największą trudnością podczas badań było wstępne oszacowanie czasu pracy algorytmów. Jeżeli rozmiar problemu wejściowego był zbyt duży, czas oczekiwania na wyniki stawał się zbyt duże.
+	\newpage
+\section*{Literatura}
 [1] Thomas Cormen, \emph{Wstęp do algorytmów}, Leiserson, Rivest, Stein 7nd edition, 2005. \newline [2] John Little, \emph{An algorithm for the traveling salesman problem}, Little, John 1963.
 
 
